--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,155 @@
-.App {
-  text-align: center;
+
+
+/* ------------------- */
+ /* -----HEADER----- */
+/* ------------------- */
+
+
+.Header {
+  height: 60px;
+  border-bottom: 1px solid lightgrey;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.Logo {
+  width: 160px;
+  height: 45px; 
+  margin-left: 120px;
   align-items: center;
+  display: flex;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+/* -------------------------- */
+ /* -----MENU--HEADER----- */
+/* ------------------------- */
+
+h1 {
+  display: flex;
+  justify-content: flex-start;
+  font-size: 32px;
+  color: #2E3333;
+  line-height: 26.7px;
+  margin-left: 120px;
+  margin-top: 46px;
+  margin-bottom: 45px;
+}
+
+.InforestoText p {
+  display: flex;
+  justify-content: flex-start;
+  font-size: 19px;
+  color: #868A8A;
+  line-height: 28.8px;
+  margin-left: 120px;
+}
+
+.InfoResto {
+  display: flex;
+  height: 260px;
+  margin-right: 105px;
+}
+
+.Menuheader {
+  width: 350px;
+  height: 198px;
+  border-radius: 5px;
+  display: flex;
+  object-fit: cover;
+  margin: 30px;
+  margin-top: 32px;
+}
+
+/* ------------------------------- */
+ /* ------CATEGORIES--MEALS----- */
+/* ------------------------------ */
+
+.Container {
+  background-color: #f2f5f5;
+  padding-top: 10px;
+}
+
+h2 {
+  margin-top: 27px;
+  margin-bottom: 26px;
+  margin-left: 120px;
+  font-size: 24px;
+  line-height: 20px;
+  font-weight: bold;
+  color: #2E3333;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+h3 {
+  font-size: 18px;
+  line-height: 15.6px;
+  font-weight: 400;
+}
+
+.Meals {
+display: flex;
+flex-wrap: wrap;
+width: 1000px;
+padding-bottom: 10px;
+}
+
+.Object {
+  width: 230px;
+}
+
+.Content {
+  padding-left: 20px;
+  width: 400px;
+  height: 165px;
+  background-color: #FFF; 
+  margin-right: 20px;
+  display: flex;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-shrink: 0;
+}
+
+.Content:nth-child(2n+1) {
+  margin-left: 120px;
+}
+
+.Content img {
+  height: 130px;
+  width: 130px;
+  object-fit: cover;
+  border-radius: 5px;
+  margin-left: 25px;
+  margin-right: 15px;
+  margin-top: 15px;
+  
+}
+
+.Content p {
+  font-size: 14px;
+  color: #808484;
+}
+
+.Content h4 {
+  font-size: 17px;
+  line-height: 14.7px;
+  color: #808484;
+  font-weight: 400;
+}
+
+/* ---------------------- */
+  /* -----FOOTER----- */
+/* ---------------------- */
+
+.Footer {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-color: #f2f5f5;
+  padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Footer span {
+  font-weight: bold;
 }
