--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,7 @@ padding-bottom: 10px;
   margin-bottom: 20px;
   display: flex;
   flex-shrink: 0;
+  cursor: pointer;
 }
 
 .Content:nth-child(2n+1) {
@@ -201,6 +202,7 @@ padding-bottom: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
 .basket-totals > div {
   display: flex;
@@ -220,6 +222,7 @@ padding-bottom: 10px;
   line-height: 13px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .color-vide {
